test/malloc1.l1.out
0
1
2
3
4
5
6
7
8
9
error: address space access out of bounds
              masput	(builtin closure)
               entry	(malloc1.l1:6)
